# emma

./: .gitignore  LICENSE.md  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  lefthook.yml  processor_config.yaml  test_pipeline.sh
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmd/ingestor/: main.go
cmd/processor/: Cargo.toml  build.rs  config.rs  geo.rs  influx_writer.rs  kafka_consumer.rs  main.rs  processor.rs  proto.rs
internal/config/: source.go
internal/handlers/: factory.go  handler.go  http_fetch.go
internal/kafka/: producer.go
proto/: climate_point.proto
proto/v1/: climate_point.proto
sources/: economic_example.yaml.disabled  health_example.yaml.disabled  infrastructure_example.yaml.disabled  river_monitoring_example.yaml.disabled  social_example.yaml.disabled  test_weather.yaml  working_test.yaml
