[package]
name = "processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "processor"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"
influxdb = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1.0"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[build-dependencies]
prost-build = "0.12"
